--- a/2_computer_vision/ex_3_8/Correcting-For-Distortion.ipynb
+++ b/2_computer_vision/ex_3_8/Correcting-For-Distortion.ipynb
@@ -21,10 +21,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "grader_id": "ds2fwcgbkh"
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -33,13 +31,30 @@
     "import cv2\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import matplotlib.image as mpimg\n",
-    "\n",
+    "import matplotlib.image as mpimg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Read in the saved objpoints and imgpoints\n",
     "dist_pickle = pickle.load( open( \"wide_dist_pickle.p\", \"rb\" ) )\n",
-    "objpoints = dist_pickle[\"objpoints\"]\n",
-    "imgpoints = dist_pickle[\"imgpoints\"]\n",
     "\n",
+    "objpoints = dist_pickle[\"objpoints\"]\n",
+    "imgpoints = dist_pickle[\"imgpoints\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "grader_id": "ds2fwcgbkh"
+   },
+   "outputs": [],
+   "source": [
     "# Read in an image\n",
     "img = cv2.imread('test_image.png')\n",
     "\n",
@@ -90,9 +105,9 @@
  "metadata": {
   "grader_mode": "",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "TF_env",
    "language": "python",
-   "name": "python3"
+   "name": "tf_env"
   },
   "language_info": {
    "codemirror_mode": {
